force-app/main/default/objects/FEC_Template_Import__c/FEC_Template_Import__c.object-meta.xml
<CustomObject>
    <label>Template Import</label>
    <nameField>
        <label>Template Import Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Import</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>