force-app/main/default/objects/FEC_Template_Import__c/fields/FEC_Applicable_for__c.field-meta.xml
<CustomField>
    <fullName>FEC_Applicable_for__c</fullName>
    <label>Applicable for</label>
    <length>255</length>
    <type>Text</type>
</CustomField>