force-app/main/default/objects/FEC_Template_Import__c/fields/FEC_Business_Process__c.field-meta.xml
<CustomField>
    <fullName>FEC_Business_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Process</label>
    <referenceTo>FEC_Business_Process__c</referenceTo>
    <relationshipLabel>Template Import</relationshipLabel>
    <relationshipName>Template_Import</relationshipName>
    <type>Lookup</type>
</CustomField>