force-app/main/default/objects/FEC_Template_Import__c/fields/FEC_User_Group__c.field-meta.xml
<CustomField>
    <fullName>FEC_User_Group__c</fullName>
    <label>User Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>